fix(file): getFileContent()에서 Files.readAllBytes() → FileSystemResource 스트리밍으로 OOM 방지 (refs #153)
대용량 파일(최대 256MB)을 byte[]로 전체 로드하던 방식을 제거하고,
FileSystemResource + ResponseEntity<Resource>로 청크 스트리밍 전송으로 변경.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>